--- a/config/common.neon
+++ b/config/common.neon
@@ -21,11 +21,12 @@ services:
 	- LeanMapper\DefaultEntityFactory
 
 	- App\Model\Authenticator\Authenticator
-	- App\Model\Authorization\Authorizator
+	- App\Model\Authorizator\Authorizator
 
 	- App\Model\Api\Facebook\FacebookApi(%facebook.appId%, %facebook.secret%)
 
 	- App\AdminModule\Components\CategoryEditForm\CategoryEditFormFactory
+	- App\AdminModule\Components\ProductEditForm\ProductEditFormFactory
 
 	- App\FrontModule\Components\UserLoginForm\UserLoginFormFactory
 	- App\FrontModule\Components\UserRegistrationForm\UserRegistrationFormFactory
@@ -37,9 +38,13 @@ services:
 	- App\FrontModule\Components\UserLoginControl\UserLoginControlFactory
 
 	- App\Model\Facades\CategoriesFacade
+	- App\Model\Facades\ProductsFacade
 	- App\Model\Facades\UsersFacade
 
 	- App\Model\Repositories\CategoryRepository
+	- App\Model\Repositories\ProductRepository
+	- App\Model\Repositories\ProductOrderRepository
+	- App\Model\Repositories\PurchaseOrderRepository
 	- App\Model\Repositories\ForgottenPasswordRepository
 	- App\Model\Repositories\PermissionRepository
 	- App\Model\Repositories\ResourceRepository
