--- a/config/common.neon
+++ b/config/common.neon
@@ -35,11 +35,14 @@ services:
 	    setup:
 	        - setMailFrom(%mailFrom.email%,%mailFrom.name%)
 	- App\FrontModule\Components\NewPasswordForm\NewPasswordFormFactory
+	- App\FrontModule\Components\ProductCartForm\ProductCartFormFactory
+	- App\FrontModule\Components\CartControl\CartControlFactory
 	- App\FrontModule\Components\UserLoginControl\UserLoginControlFactory
 
 	- App\Model\Facades\CategoriesFacade
 	- App\Model\Facades\ProductsFacade
 	- App\Model\Facades\UsersFacade
+	- App\Model\Facades\CartFacade
 
 	- App\Model\Repositories\CategoryRepository
 	- App\Model\Repositories\ProductRepository
@@ -50,3 +53,5 @@ services:
 	- App\Model\Repositories\ResourceRepository
 	- App\Model\Repositories\RoleRepository
 	- App\Model\Repositories\UserRepository
+	- App\Model\Repositories\CartRepository
+	- App\Model\Repositories\CartItemRepository
