--- a/config/common.neon
+++ b/config/common.neon
@@ -38,6 +38,7 @@ services:
 	- App\FrontModule\Components\ProductCartForm\ProductCartFormFactory
 	- App\FrontModule\Components\CartControl\CartControlFactory
 	- App\FrontModule\Components\UserLoginControl\UserLoginControlFactory
+	- App\FrontModule\Components\ProductsFilterForm\ProductsFilterFormFactory
 
 	- App\Model\Facades\CategoriesFacade
 	- App\Model\Facades\ProductsFacade
